--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "builds": [
     {
       "src": "build_files.sh",
-      "use": "@vercel/static-build",
+      "use": "@vercel/python",
       "config": {
         "distDir": "static"
       }
