--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-asgiref==3.8.1
-dataclasses==0.6
-Django==5.1.7
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
-djongo==1.2.31
-dnspython==2.7.0
-dotenv==0.9.9
-psycopg2-binary==2.9.10
-PyJWT==2.9.0
-pymongo==4.11.3
-python-dotenv==1.1.0
-sqlparse==0.5.3
-whitenoise==6.9.0
+asgiref>=3.7.0
+Django>=5.0.0
+djangorestframework>=3.14.0
+djangorestframework_simplejwt>=5.3.0
+djongo>=1.3.6
+dnspython>=2.4.0
+psycopg2-binary>=2.9.9
+PyJWT>=2.8.0
+pymongo>=4.6.0
+python-dotenv>=1.0.0
+sqlparse>=0.4.4
+whitenoise>=6.6.0
