--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,28 @@
   "builds": [
     {
       "src": "build_files.sh",
-      "use": "@vercel/python",
+      "use": "@vercel/static-build",
       "config": {
-        "distDir": "static"
+        "distDir": "staticfiles"
       }
     },
     {
-      "src": "/nfc_system/wsgi.py",
+      "src": "nfc_system/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb"}
+      "config": { 
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "nfc_system/wsgi.py"
+      "src": "/static/(.*)",
+      "dest": "/staticfiles/$1"
     },
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "src": "/(.*)",
+      "dest": "nfc_system/wsgi.py"
     }
   ]
 }
